# python-text-statistics

./: .gitignore  ProcessText.py  README.md  TextStatistics.py  client.py  pyproject.toml  server.py  wordCounter.py
etext/: greatGatsby.txt
singleThreaded/: ProcessTextClient.py  ProcessTextServer.py
test/: test_TextStatistics.py  test_wordCount.py
