[tool.poetry]
name = "python-text-statistics"
version = "0.1.0"
description = "A text statistics project used for practicing python sockets."
authors = ["Cameron Wright <ccameronwright@gmail.com>"]
readme = "README.md"
packages = [{include = "python_text_statistics"}]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.2"
flake8 = "^5.0.4"
black = "^22.8.0"

[flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
